# pomodoro-bot

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  Dockerfile  Dockerfile.gen  README.md  USAGE.md  alembic.ini  docker-compose.gen.yml  docker-compose.yml  pomodoro-bot-spec.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260424_000001_b1c2d3e4f5a6_initial_schema.py  20260426_000001_c2d3e4f5a6b7_add_bot_user_id.py  20260513_000001_d3e4f5a6b7c8_add_phase_message_id.py
scripts/: generate_voices.py
src/: bot.py  config.py  constants.py  main.py  room_manager.py  voice_manager.py
src/core/: __init__.py  phase.py  room_state.py
src/database/: __init__.py  engine.py  models.py
src/services/: __init__.py  room_service.py
src/ui/: __init__.py  embeds.py  panel_views.py  room_panel.py  timer_image.py
tests/: conftest.py  test_bot.py  test_config.py  test_countdown_cues.py  test_generate_voices.py  test_phase_ping_lifecycle.py  test_room_manager.py  test_voice_manager.py
tests/core/: test_phase.py  test_room_state.py
tests/services/: conftest.py  test_room_service.py
tests/ui/: test_embeds.py  test_panel_views.py  test_room_panel.py
voices/: voices.json
